--- a/src/Teste.BancoMaster.CC.Bus/Teste.BancoMaster.CC.Bus.csproj
+++ b/src/Teste.BancoMaster.CC.Bus/Teste.BancoMaster.CC.Bus.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="5.1.2" />
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Polly" Version="7.2.3" />
   </ItemGroup>
 
   <ItemGroup>
