--- a/src/CQRS.DDD.Clean.RabbitMQ.Application.BusAPI/CQRS.DDD.Clean.RabbitMQ.Application.BusAPI.csproj
+++ b/src/CQRS.DDD.Clean.RabbitMQ.Application.BusAPI/CQRS.DDD.Clean.RabbitMQ.Application.BusAPI.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Teste.BancoMaster.CC.Bus\Teste.BancoMaster.CC.Bus.csproj" />
     <ProjectReference Include="..\Teste.BancoMaster.Domain\Teste.BancoMaster.Domain.csproj" />
+    <ProjectReference Include="..\CQRS.DDD.Clean.RabbitMQ.CC.Bus\CQRS.DDD.Clean.RabbitMQ.CC.Bus.csproj" />
   </ItemGroup>
 
 </Project>
