Renamed Teste.BancoMaster.Domain.Core to CQRS.DDD.Clean.RabbitMQ.Domain.Core

--- a/src/CQRS.DDD.Clean.RabbitMQ.CC.Bus/CQRS.DDD.Clean.RabbitMQ.CC.Bus.csproj
+++ b/src/CQRS.DDD.Clean.RabbitMQ.CC.Bus/CQRS.DDD.Clean.RabbitMQ.CC.Bus.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Teste.BancoMaster.Domain.Core\Teste.BancoMaster.Domain.Core.csproj" />
+    <ProjectReference Include="..\CQRS.DDD.Clean.RabbitMQ.Domain.Core\CQRS.DDD.Clean.RabbitMQ.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
