--- a/src/CQRS.DDD.Clean.RabbitMQ.Domain/CQRS.DDD.Clean.RabbitMQ.Domain.csproj
+++ b/src/CQRS.DDD.Clean.RabbitMQ.Domain/CQRS.DDD.Clean.RabbitMQ.Domain.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Teste.BancoMaster.Domain.Core\Teste.BancoMaster.Domain.Core.csproj" />
     <ProjectReference Include="..\CQRS.DDD.Clean.RabbitMQ.CC.Bus\CQRS.DDD.Clean.RabbitMQ.CC.Bus.csproj" />
+    <ProjectReference Include="..\CQRS.DDD.Clean.RabbitMQ.Domain.Core\CQRS.DDD.Clean.RabbitMQ.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
