Renamed Teste.BancoMaster.Infra.Data to CQRS.DDD.Clean.RabbitMQ.Infra.Data

--- a/src/CQRS.DDD.Clean.RabbitMQ.Application/CQRS.DDD.Clean.RabbitMQ.Application.csproj
+++ b/src/CQRS.DDD.Clean.RabbitMQ.Application/CQRS.DDD.Clean.RabbitMQ.Application.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Teste.BancoMaster.Infra.Data\Teste.BancoMaster.Infra.Data.csproj" />
+    <ProjectReference Include="..\CQRS.DDD.Clean.RabbitMQ.Infra.Data\CQRS.DDD.Clean.RabbitMQ.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
